--- a/release.json
+++ b/release.json
@@ -2,5 +2,5 @@
     "versionCode": 544,
     "versionName": "v2.4",
     "changelog": ["iptv-org as default playlist", "app in landscape mode", "ffmpeg libs", "optimize prebuffer", "change player layout", "and more.."],
-    "downloadUrl": "https://t.me/c/1955269671/825"
+    "downloadUrl": "https://github.com/AlbasAlka/NontonTV/releases/download/2.4/nonton.tv_v2.4_b544.apk"
 }
